--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
-    "angular-highcharts": "^11.2.1",
-    "highcharts": "^9.0.0",
-    "highcharts-angular": "^2.10.0",
+    "angular-google-charts": "^2.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
