--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
+    "angular-6-datatable": "^0.8.0",
     "angular-google-charts": "^2.0.1",
     "bootstrap": "^5.0.0-beta2",
     "rxjs": "~6.5.4",
