--- a/package.json
+++ b/package.json
@@ -21,19 +21,21 @@
     "@angular/router": "~9.0.6",
     "angular-6-datatable": "^0.8.0",
     "angular-google-charts": "^2.0.1",
+    "aws-sdk": "^2.881.0",
     "bootstrap": "^5.0.0-beta2",
+    "express": "^4.17.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.6",
+    "@angular-devkit/build-angular": "^0.900.7",
     "@angular/cli": "~9.0.6",
     "@angular/compiler-cli": "~9.0.6",
     "@angular/language-service": "~9.0.6",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
